Adding a preview check for records and sealed types