@@ -36,7 +36,8 @@ import static org.testng.Assert.*;
  * VarargsRecordsTest
  *
  * @test
- * @run testng VarargsRecordsTest
+ * @compile --enable-preview -source ${jdk.version} VarargsRecordsTest.java
+ * @run testng/othervm --enable-preview VarargsRecordsTest
  */
 @Test
 public class VarargsRecordsTest {
