@@ -32,7 +32,6 @@
  *          jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.util
  * @build combo.ComboTestHelper
-
  * @run main CheckRecordMembers
  */
 
@@ -103,6 +102,7 @@ public class CheckRecordMembers extends combo.ComboInstance<CheckRecordMembers> 
     @Override
     public void doWork() throws Throwable {
         newCompilationTask()
+                //.withOptions(new String[]{"--enable-preview", "-source", Integer.toString(Runtime.version().feature())})
                 .withSourceFromTemplate("Data", sourceTemplate)
                 .generate(this::check);
     }
