@@ -24,10 +24,10 @@
 /*
  * @test
  * @summary smoke test for sealed and separate compilation
- * @compile TestSeparate01.java SealedClasses.java
+ * @compile --enable-preview -source ${jdk.version} TestSeparate01.java SealedClasses.java
  * @clean *
- * @compile SealedClasses.java
- * @compile TestSeparate01.java
+ * @compile --enable-preview -source ${jdk.version} SealedClasses.java
+ * @compile --enable-preview -source ${jdk.version} TestSeparate01.java
  */
 
 public class TestSeparate01 {
